--- a/packages/tql-engine-c/Makefile
+++ b/packages/tql-engine-c/Makefile
@@ -1,10 +1,10 @@
 CC := clang
-CFLAGS := -Wall -Werror -Wno-unused-function -g
+CFLAGS := -Wall -Werror -Wno-unused-function -Wno-int-to-void-pointer-cast -Wno-void-pointer-to-int-cast -g
 LDFLAGS := -ltree-sitter
 
 TS_JSON_FLAGS := $(TREE_SITTER_JSON)/parser.c
 
-tql: src/tql.c
+tql: src/tql.c src/engine.c src/binding.c grammars/typescript/parser.o grammars/typescript/scanner.o
 	$(CC) $(CFLAGS) $(LDFLAGS) \
 		grammars/typescript/parser.o \
 		grammars/typescript/scanner.o \
