Implement If op

--- a/packages/tql-engine-c/Makefile
+++ b/packages/tql-engine-c/Makefile
@@ -1,5 +1,5 @@
 CC := clang
-CFLAGS := -Wall -Werror -Wno-unused-function -Wno-int-to-void-pointer-cast -Wno-void-pointer-to-int-cast -g
+CFLAGS := -Wall -Werror -Wno-unused-function -Wno-unused-variable -Wno-int-to-void-pointer-cast -Wno-void-pointer-to-int-cast -g
 LDFLAGS := -ltree-sitter
 
 TS_JSON_FLAGS := $(TREE_SITTER_JSON)/parser.c
