--- a/packages/tql-engine-c/Makefile
+++ b/packages/tql-engine-c/Makefile
@@ -4,14 +4,24 @@ LDFLAGS := -ltree-sitter
 
 TS_JSON_FLAGS := $(TREE_SITTER_JSON)/parser.c
 
-tql: src/tql.c src/engine.c src/binding.c grammars/typescript/parser.o grammars/typescript/scanner.o
+tql: src/main.c src/dyn_array.h build/engine.o build/binding.o grammars/typescript/parser.o grammars/typescript/scanner.o
 	$(CC) $(CFLAGS) $(LDFLAGS) \
 		grammars/typescript/parser.o \
 		grammars/typescript/scanner.o \
-		src/tql.c \
-		src/engine.c \
-		src/binding.c \
+		build/engine.o \
+		build/binding.o \
+		src/main.c \
 		-o tql
+
+build/engine.o: src/engine.c src/engine.h src/dyn_array.h
+	$(CC) $(CFLAGS) \
+		-c src/engine.c \
+		-o build/engine.o
+
+build/binding.o: src/binding.c src/binding.h src/dyn_array.h
+	$(CC) $(CFLAGS) \
+		-c src/binding.c \
+		-o build/binding.o
 
 grammars/typescript/parser.o:
 	$(CC) $(CFLAGS) \
