Squashed commit of the following:
commit bd1bf45be9cec0e952f1407a0ecc8037d02c7559
Author: Tony Du <tonydu121@hotmail.com>
Date:   Fri Dec 26 11:07:43 2025 -0800

    Simplify grammar

commit 76c185492732d24ff66690c0c8c3365d69e11aaf
Author: Tony Du <tonydu121@hotmail.com>
Date:   Fri Dec 26 10:31:45 2025 -0800

    WIP

commit c9941342c0d9fc7e36987d1c8c99d98a55c6a7a8
Author: Tony Du <tonydu121@hotmail.com>
Date:   Fri Dec 26 08:36:35 2025 -0800

    AST work

--- a/packages/tql-engine-c/Makefile
+++ b/packages/tql-engine-c/Makefile
@@ -1,6 +1,6 @@
 CC ?= clang
 # TODO: Expose the API and use the API instead of using from lib directly
-CFLAGS += -std=c11 -Wall -Werror -Wpedantic -fPIC -g -Ilib
+CFLAGS += -std=c11 -Wall -Wpedantic -Wno-strict-prototypes -Werror -fsanitize=address -Ilib -fPIC -g
 LDFLAGS += -ltree-sitter
 ARFLAGS := rcs
 
@@ -11,9 +11,12 @@ HEADERS := $(wildcard src/*.h)
 
 SOEXT := so
 
+TREE_SITTER_TQL := ../tree-sitter-tql
+
 TQL_OBJS := $(patsubst $(LIB_DIR)/%.c,$(BUILD_DIR)/%.o,$(wildcard $(LIB_DIR)/*.c))
+TS_TQL_OBJS := $(patsubst $(TREE_SITTER_TQL)/src/%.c,$(GRAMMAR_DIR)/tql/%.o,$(wildcard $(TREE_SITTER_TQL)/src/*.c))
 TS_TYPESCRIPT_OBJS := $(patsubst $(TREE_SITTER_TYPESCRIPT)/typescript/src/%.c,$(GRAMMAR_DIR)/typescript/%.o,$(wildcard $(TREE_SITTER_TYPESCRIPT)/typescript/src/*.c))
-OBJS := $(TQL_OBJS) $(TS_TYPESCRIPT_OBJS)
+OBJS := $(TQL_OBJS) $(TS_TQL_OBJS) $(TS_TYPESCRIPT_OBJS)
 
 all: tql-cli libtql.a libtql.$(SOEXT)
 
@@ -36,6 +39,9 @@ $(GRAMMAR_DIR)/typescript/%.o: $(TREE_SITTER_TYPESCRIPT)/typescript/src/%.c
 	mkdir -p $(@D)
 	$(CC) $(CFLAGS) -I$(TREE_SITTER_TYPESCRIPT)/typescript/src -c $< -o $@
 
+$(GRAMMAR_DIR)/tql/%.o: $(TREE_SITTER_TQL)/src/%.c
+	mkdir -p $(@D)
+	$(CC) $(CFLAGS) -I$(TREE_SITTER_TQL)/src -c $< -o $@
 
 clean:
 	$(RM) -r build
