Parse simple query

--- a/packages/tql-engine-c/Makefile
+++ b/packages/tql-engine-c/Makefile
@@ -1,6 +1,6 @@
 CC ?= clang
 # TODO: Expose the API and use the API instead of using from lib directly
-CFLAGS += -std=c11 -Wall -Wpedantic -Wno-strict-prototypes -Werror -fsanitize=address -Ilib -fPIC -g
+CFLAGS += -std=c11 -Wall -Wpedantic -Wno-strict-prototypes -Werror -Ilib -fPIC -g -fsanitize=address
 LDFLAGS += -ltree-sitter
 ARFLAGS := rcs
 
@@ -26,7 +26,7 @@ libtql.a: $(OBJS)
 libtql.$(SOEXT): $(OBJS)
 	$(CC) $(CFLAGS) $(LDFLAGS) -shared $^ $(LDLIBS) -o $@
 
-tql-cli: $(OBJS) src/cli.c
+tql-cli: $(OBJS) cli/main.c
 	$(CC) $(CFLAGS) $(LDFLAGS) $^ -o $@
 
 $(TQL_OBJS): $(HEADERS)
